Excercise - 1 - Installing Service Mesh/customer-api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-api-virtual-service-pod04
spec:
  hosts:
  - '*.apps.azureneocp.neinnovation-ocp.com'
  gateways:
  - acctrainings-gateway-pod04
  http:
  - match:
    - uri:
        prefix: /api/pod04/customer
    route:
    - destination:
        host: customer-api-pod04
        port:
          number: 8080
