Excercise - 1 - Installing Service Mesh/policy-api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: policy-api-virtual-service-pod01
spec:
  gateways:
    - acctrainings-gateway-pod01
  hosts:
    - '*.apps.azureneocp.neinnovation-ocp.com'
  http:
    - match:
        - uri:
            prefix: /api/pod01/policy
      route:
        - destination:
            host: policy-api-pod01
            port:
              number: 8080
